deploy para a page

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,8 @@ DB_NAME=bd23
 
 #TOKEN
 JWT_SECRET=pint2324
+
+#Email
+EMAIL_SERVICE=gmail
+EMAIL_USER=vasconascimentofernandes@gmail.com
+EMAIL_PASSWORD=vasfer04
