--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
   },
   "scripts": {
     "start": "export PORT=3001 && react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
