--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mssql": "^10.0.2",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   }
 }
