--- a/server/src/config/.env
+++ b/server/src/config/.env
@@ -7,6 +7,9 @@ DB_NAME=bd23
 #TOKEN
 JWT_SECRET=pint2324
 
+#Google 
+GOOGLE_CLIENT_ID=946771932227-a38o98q56j3dqaubcqk9pho47u76u89n.apps.googleusercontent.com
+
 #Email
 EMAIL_SERVICE=gmail
 EMAIL_USER=vasconascimentofernandes@gmail.com
