deploy frontend com sucesso

--- a/server/.env
+++ b/server/.env
@@ -5,7 +5,12 @@ JWT_SECRET=pint2324
 #Google 
 GOOGLE_CLIENT_ID=946771932227-a38o98q56j3dqaubcqk9pho47u76u89n.apps.googleusercontent.com
 
-#Email
-EMAIL_SERVICE=gmail
-EMAIL_USER=vasconascimentofernandes@gmail.com
-EMAIL_PASSWORD=vasfer04
+#Database
+POSTGRES_URL="postgres://default:3UQmGfiqWLD9@ep-summer-feather-a2mwf8y4-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:3UQmGfiqWLD9@ep-summer-feather-a2mwf8y4-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:3UQmGfiqWLD9@ep-summer-feather-a2mwf8y4-pooler.eu-central-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:3UQmGfiqWLD9@ep-summer-feather-a2mwf8y4.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-summer-feather-a2mwf8y4-pooler.eu-central-1.aws.neon.tech"
+POSTGRES_PASSWORD="3UQmGfiqWLD9"
+POSTGRES_DATABASE="verceldb"
