--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,10 @@ JWT_SECRET=pint2324
 
 #Google 
 GOOGLE_CLIENT_ID=946771932227-a38o98q56j3dqaubcqk9pho47u76u89n.apps.googleusercontent.com
+
+#Database
+DB_HOST=dpg-cp5qrlljm4es73a4pc1g-a.frankfurt-postgres.render.com
+DB_PORT=5432
+DB_NAME=pint_yeyy
+DB_USER=pint
+DB_PASS=XtAldyDLdMSDdhuNcXPHcW0aB69asZwN
