--- a/server/.gitignore
+++ b/server/.gitignore
@@ -13,6 +13,7 @@ pids
 # local configuration
 *.env 
 *.env.local
+*.env.production
 *.env.development.local
 *.env.test.local
 *.env.production.local
