--- a/server/.env
+++ b/server/.env
@@ -13,4 +13,4 @@ DB_USER=pint
 DB_PASS=XtAldyDLdMSDdhuNcXPHcW0aB69asZwN
 
 #api
-API_URL=http://localhost:3000
+REACT_APP_API_URL=http://localhost:3001
