--- a/server/.env.dev
+++ b/server/.env.dev
@@ -13,4 +13,4 @@ DB_USER=pint
 DB_PASS=XtAldyDLdMSDdhuNcXPHcW0aB69asZwN
 
 #api
-REACT_APP_API_URL=https://pint-f1tf.onrender.com
+REACT_APP_API_URL=http://localhost:3001
