npm run start para host

--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node -r dotenv/config server.js dotenv_config_path=.env.dev",
+    "start": "node -r dotenv/config server.js dotenv_config_path=.env",
     "build": "node server.js",
     "dev": "nodemon -r dotenv/config server.js dotenv_config_path=.env.dev"
   },
