--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,11 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.0",
     "web-vitals": "^2.1.4"
   },
