--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^6.0.0-alpha.8",
     "@mui/material": "^6.0.0-alpha.8",
     "@mui/x-data-grid": "^7.6.2",
+    "@mui/x-date-pickers-pro": "^7.7.0",
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,9 +18,13 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "cross-spawn": "^7.0.3",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.13.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.51.5",
