--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,15 @@
     "dev": "nodemon -r dotenv/config server.js dotenv_config_path=.env.dev"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/x-date-pickers-pro": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
@@ -25,6 +30,8 @@
     "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
+    "react-big-calendar": "^1.13.0",
+    "react-date-range": "^2.0.1",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
