--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^6.0.0-alpha.8",
     "@mui/material": "^6.0.0-alpha.8",
     "@mui/x-data-grid": "^7.6.2",
@@ -37,7 +38,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start:local": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts start",
