--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "cross-spawn": "^7.0.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "i18next": "^23.11.5",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.51.5",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-material-ui-carousel": "^3.4.2",
