--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "google-auth-library": "^9.9.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -28,10 +29,13 @@
     "mssql": "^10.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "react-big-calendar": "^1.13.0",
     "react-date-range": "^2.0.1",
+    "react-facebook-login": "^4.1.1",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
