--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-scripts": "5.0.1",
     "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.0",
     "web-vitals": "^2.1.4",
