--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/x-date-pickers-pro": "^7.7.0",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
